Fixed broken syntax colouring; fixed agent/button overlap.
Syntax highlighting was broken, it works again now.

Syntax colours are made darker / more readable.

Renamed ACE syntax definitions from "yarn" to "wool".

Bugfix: Agent div could overlap with button, making it unclickable.

--- a/html5/wooleditor/css/style.css
+++ b/html5/wooleditor/css/style.css
@@ -588,32 +588,33 @@ a:hover { color: #000;}
 }
 
 /* --- EDITOR HIGHLIGHTING --- */
+/*This has to match the colours as defined in ACE's theme-wool.js*/
 
 .editor p, .node .body p { display: inline; margin: 0; padding: 0; }
 
-.linkname
-{
-	color: #3ecfe9;
+.linkname {
+	color: #1ab;
 }
 
-.linkbounds
-{
-	color: #0ec0e0;
+.linkbounds {
+	color: #1cd;
+	font-weight: bold;
 }
 
-.condition
-{
+.condition {
 	color: #e93ecf;
 }
 
-.conditionbounds
-{
+.conditionbounds {
 	color: #e00ec0;
 }
 
-.comment
-{
-	color: #44fe66;
+.comment {
+	color: #2a2;
+}
+
+.inlinevariable {
+	color: #22f;
 }
 
 /* --- NODE DELETE --- */
